--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.3",
     "fs": "^0.0.1-security",
     "mapbox-gl": "^2.7.0",
+    "mysql": "^2.18.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
