--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "meta-seoul-web",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://1.221.216.110:8101",
+  "proxy": "http://localhost:8020",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "fs": "^0.0.1-security",
     "mapbox-gl": "^2.7.0",
@@ -20,7 +21,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set PORT=8101 && react-scripts start",
+    "start": "set PORT=8022 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
